--- a/Streaming Services/AppleTVPlus.json
+++ b/Streaming Services/AppleTVPlus.json
@@ -9,26 +9,8 @@
       "negate": false,
       "required": true,
       "fields": {
-        "value": "\\b(atvp|aptv|Apple TV\\+)\\b"
+        "value": "\\b(atvp|aptv|Apple TV\\+)\\b(?=[ ._-]web[ ._-]?(dl|rip)\b)"
       }
-    },
-    {
-      "name": "WEBDL",
-      "implementation": "SourceSpecification",
-      "negate": false,
-      "required": false,
-      "fields": {
-        "value": 3
-      }
-    },
-    {
-      "name": "WEBRIP",
-      "implementation": "SourceSpecification",
-      "negate": false,
-      "required": false,
-      "fields": {
-        "value": 4
-      }
-    }
+    } 
   ]
 }
